@@ -157,6 +157,13 @@ L<Minion/"backoff"> after the first attempt, defaults to C<1>.
 
 Delay job for this many seconds (from now).
 
+=item expire
+
+  expire => 300
+
+Job is valid for this many seconds (from now) before it expires. Note that this
+option is B<EXPERIMENTAL> and might change without warning!
+
 =item notes
 
   notes => {foo => 'bar', baz => [1, 2, 3]}
@@ -308,6 +315,12 @@ Epoch time job was created.
   delayed => 784111777
 
 Epoch time job was delayed to.
+
+=item expires
+
+  expires => 784111777
+
+Epoch time job is valid until before it expires.
 
 =item finished
 
@@ -635,6 +648,13 @@ Number of times performing this job will be attempted.
   delay => 10
 
 Delay job for this many seconds (from now).
+
+=item expire
+
+  expire => 300
+
+Job is valid for this many seconds (from now) before it expires. Note that this
+option is B<EXPERIMENTAL> and might change without warning!
 
 =item parents
 
