@@ -2,7 +2,7 @@ runtime:
   requires:
     perl: '5.010001'
     List::Util: 0
-    Minion: '10.10'
+    Minion: '10.13'
     Mojolicious: '7.29'
     Mojo::SQLite: '3.000'
     Sys::Hostname: 0
